# framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
crates/brylix/: Cargo.toml  README.md
crates/brylix-cli/: Cargo.toml  README.md
crates/brylix-cli/src/: main.rs
crates/brylix-cli/src/commands/: build.rs  deploy.rs  dev.rs  generate.rs  migrate.rs  mod.rs  new.rs  test.rs
crates/brylix-cli/templates/: repository.rs.hbs  resolver.rs.hbs
crates/brylix/src/: lib.rs  prelude.rs
crates/brylix/src/auth/: admin_override.rs  claims.rs  middleware.rs  mod.rs  password.rs  roles.rs
crates/brylix/src/config/: builder.rs  mod.rs
crates/brylix/src/db/: mod.rs
crates/brylix/src/errors/: domain.rs  graphql.rs  http.rs  mod.rs
crates/brylix/src/graphql/: context.rs  guards.rs  helpers.rs  mod.rs  pagination.rs
crates/brylix/src/handler/: cors.rs  mod.rs  multipart.rs  router.rs
crates/brylix/src/helpers/: json.rs  mod.rs  soft_delete.rs  time.rs
crates/brylix/src/provider/: email.rs  mod.rs  s3.rs
crates/brylix/src/tenant/: manager.rs  mod.rs  pool.rs
crates/brylix/src/validation/: mod.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: brylix.md  cli.md
docs/src/getting-started/: installation.md  project-structure.md  quick-start.md
docs/src/guides/: authentication.md  configuration.md  database.md  deployment.md  error-handling.md  file-uploads.md  graphql.md  multi-tenancy.md
examples/basic/: .env.example  Cargo.toml  README.md
examples/basic/src/: main.rs
examples/basic/src/graphql/: mod.rs  schema.rs  types.rs
examples/basic/src/model/: mod.rs  post.rs
examples/basic/src/repository/: mod.rs  post_repository.rs
examples/basic/src/service/: mod.rs  post_service.rs
examples/multi-tenant/: .env.example  Cargo.toml  README.md
examples/multi-tenant/src/: main.rs
examples/multi-tenant/src/graphql/: mod.rs  schema.rs  types.rs
examples/multi-tenant/src/model/: mod.rs  task.rs  user.rs
examples/multi-tenant/src/repository/: mod.rs  task_repository.rs  user_repository.rs
examples/multi-tenant/src/service/: auth_service.rs  mod.rs  task_service.rs
templates/: entity.rs.hbs  migration.rs.hbs  service.rs.hbs
