[package]
name = "brylix-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI tool for the Brylix framework"
readme = "README.md"
keywords = ["cli", "graphql", "lambda", "scaffolding", "code-generation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "brylix"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
handlebars = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
